--- a/careconnect/src/pages/ChatBox.css
+++ b/careconnect/src/pages/ChatBox.css
@@ -69,7 +69,7 @@ main::-webkit-scrollbar-thumb {
   background-color: rgb(56, 56, 143);
 }
 
-input {
+.input {
   line-height: 1.5;
   width: 100%;
   font-size: 1.5rem;
@@ -110,7 +110,7 @@ li {
   list-style: none;
 }
 
-p {
+.para {
   max-width: 500px;
   margin-bottom: 12px;
   line-height: 24px;
